<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="#cefacb"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="2dp">

            <TextView
                android:id="@+id/tv_repos_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:text="@string/repos_name"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_repos_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:paddingEnd="15dp"
                android:paddingLeft="30dp"
                android:paddingRight="15dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:text="@string/repos_desc"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_opn_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:contentDescription="@string/img"
            android:padding="7dp"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_view" />

    </LinearLayout>

</android.support.v7.widget.CardView>